# django-openutils

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
django_openutils/: __init__.py  mixins.py
tests/: models.py  settings.py  test_mixins.py
